# ttsystemd

./: .gitignore  Justfile  Notes.md  README.md  flake.nix  pyproject.toml  systemd.txt  systemd_diff.txt  textual.just  tox.ini
src/test/integration/: test_interface_definition_cache.py  test_merge.py
src/test/integration/runtime/: test_collect_properties.py  test_collect_units.py
src/test/integration/static/: test_cat.py  test_collect_units.py  test_properties.py  test_status.py
src/test/unit/runtime/: test_dbus_object.py
src/test/unit/static/: test_cat.py  test_unit_properties.py
src/ttsystemd/: __main__.py  stringify.py
src/ttsystemd/systemd/: cache.py  collect.py  merge.py  types.py
src/ttsystemd/systemd/runtime/: collect.py  connect.py  dbus_object.py  interface.py  manager.py  object.py  properties.py  service.py  types.py  unit.py  unit_file.py  utils.py
src/ttsystemd/systemd/runtime/cache/: interface_definition.py  unit.py
src/ttsystemd/systemd/static/: collect.py  parse.py  systemctl.py  types.py  unit_cat.py  unit_file_list.py  unit_list.py  unit_properties.py  unit_status.py
src/ttsystemd/ui/: app.py  ttsystemd.tcss
src/ttsystemd/ui/cache/: __init__.py
src/ttsystemd/ui/pane/: system_units.py  systemd_info.py  user_units.py
src/ttsystemd/ui/table/: property_2_item.py  systemd_defaults.py  systemd_overview.py  systemd_timestamps.py  unit_properties.py  units.py  units_table.py
src/ttsystemd/ui/widget/: content.py  unit_details.py  units_overview.py
tests/integration/: test_cache.py  test_merge.py
tests/integration/runtime/: test_collect_properties.py  test_collect_units.py
tests/unit/runtime/: test_utils.py
tests/unit/static/: test_cat.py  test_unit_properties.py
(+16 files in other folders)
